--- a/clase_4/estilos.css
+++ b/clase_4/estilos.css
@@ -53,8 +53,8 @@ font-family: 'Varela Round', sans-serif;
 .ilustraciones{
     background-color: rgb(97, 74, 230);
     padding: 1rem;
-    width: 70%;
     float: left;
+    width: 70%;
     height: 100vh;
 }
 /* % de caja de contenido */
@@ -76,4 +76,50 @@ line-height: 2rem;
 }
 .colores img{
     width: 80%;
+}
+.container{
+    background-color: rgb(214, 203, 203);
+}
+.caja{
+    width: 200px;
+    height: 300px;
+    display: inline-block;
+    margin: 20px 20px;
+    border-radius: 10px;
+    border: double 10px black;
+}
+.texto{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2rem;
+
+}
+.uno{background-color: blue;
+}
+.dos{background-color: yellow;
+}
+.tres{background-color: red;
+}
+.cuatro{background-color: blueviolet;
+}
+.cinco{background-color: brown;
+}
+.seis{background-color: aqua;
+}
+.siete{background-color:coral;
+}
+.ocho{background-color:darkmagenta;
+}
+.linksContenido{
+    background-color: rgb(254, 255, 255);
+}
+.linksContenido li{
+    display: inline-block;
+    padding: 20px 20px 30px 30px;
+}
+.links{
+    font-size: 1.3rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
 }
